--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "darkcord",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "scripts": {
-    "c": "tsc && tscpaths -p tsconfig.json -s ./src -o ./dist && tscpaths -p tsconfig.json -s ./src -o ./typing"
+    "c": "tsc && tscpaths -p tsconfig.json -s ./src -o ./dist && tscpaths -p tsconfig.json -s ./src -o ./typing",
+    "prepublish": "c  && publish"
   },
   "main": "./dist/index.js",
   "typings": "./typing",
@@ -21,8 +22,6 @@
   },
   "optionalDependencies": {
     "erlpack": "^0.1.4",
-    "kazagumo": "^2.3.2",
-    "shoukaku": "^3.3.1",
     "tweetnacl": "^1.0.3",
     "zlib-sync": "^0.1.7"
   }
