--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "darkcord",
-  "version": "0.2.5-dev",
+  "version": "0.2.5-dev-2",
   "scripts": {
     "c": "tsc && tscpaths -p tsconfig.json -s ./src -o ./dist && tscpaths -p tsconfig.json -s ./src -o ./typing",
     "copy_wasm": "xcopy \"src\\utils\\zlib.wasm\" \"dist\\utils\"",
