--- a/apps/guide/tsconfig.json
+++ b/apps/guide/tsconfig.json
@@ -1,3 +1,18 @@
 {
-  "extends": "astro/tsconfigs/base"
+	"compilerOptions": {
+		"lib": ["ESNext", "DOM", "DOM.Iterable"],
+		"isolatedModules": true,
+		"jsx": "preserve",
+		"baseUrl": ".",
+		"noEmit": true,
+		"allowJs": false,
+		"incremental": true,
+		"skipLibCheck": true,
+		"types": ["@astrojs/image/client"],
+		"paths": {
+			"~/*": ["./src/*"]
+		}
+	},
+	"include": ["src/**/*.ts", "src/**/*.tsx", "types.d.ts"],
+	"exclude": ["node_modules"]
 }
