feat: add base navbar

--- a/apps/guide/.eslintrc.json
+++ b/apps/guide/.eslintrc.json
@@ -1,10 +1,14 @@
 {
-	"extends": ["neon/react", "neon/astro", "neon/prettier"],
+	"extends": ["neon/common", "neon/react", "neon/astro", "neon/prettier"],
+	"parserOptions": {
+		"project": "./tsconfig.eslint.json"
+	},
 	"settings": {
 		"react": {
 			"version": "detect"
 		}
 	},
+	"ignorePatterns": ["**/dist/*"],
 	"rules": {
 		"react/jsx-filename-extension": [1, { "extensions": [".tsx", ".astro"] }]
 	}
