--- a/apps/guide/package.json
+++ b/apps/guide/package.json
@@ -24,9 +24,11 @@
 		"url": "https://github.com/JustAWaifuHunter/darkcord/issues"
 	},
 	"dependencies": {
+		"ariakit": "^2.0.0-next.43",
 		"astro": "^2.0.4",
 		"react": "^18.0.0",
-		"react-dom": "^18.0.0"
+		"react-dom": "^18.0.0",
+		"react-icons": "^4.7.1"
 	},
 	"devDependencies": {
 		"@astrojs/image": "^0.13.1",
@@ -44,6 +46,7 @@
 		"prettier": "^2.8.3",
 		"prettier-plugin-astro": "^0.8.0",
 		"prettier-plugin-tailwindcss": "^0.2.2",
+		"sharp": "^0.31.3",
 		"unocss": "^0.49.1"
 	},
 	"engines": {
