--- a/apps/guide/package.json
+++ b/apps/guide/package.json
@@ -24,11 +24,19 @@
 		"url": "https://github.com/JustAWaifuHunter/darkcord/issues"
 	},
 	"dependencies": {
+		"@expo/styleguide": "^6.1.3",
 		"ariakit": "^2.0.0-next.43",
 		"astro": "^2.0.4",
+		"hast-util-to-string": "^2.0.0",
+		"hastscript": "^7.2.0",
+		"html-escaper": "^3.0.3",
 		"react": "^18.0.0",
+		"react-custom-scrollbars-2": "^4.5.0",
 		"react-dom": "^18.0.0",
-		"react-icons": "^4.7.1"
+		"react-icons": "^4.7.1",
+		"react-use": "^17.4.0",
+		"rehype-autolink-headings": "^6.1.1",
+		"rehype-slug": "^5.1.0"
 	},
 	"devDependencies": {
 		"@astrojs/image": "^0.13.1",
@@ -40,6 +48,8 @@
 		"@unocss/astro": "^0.49.1",
 		"@unocss/cli": "^0.49.1",
 		"@unocss/reset": "^0.49.1",
+		"astro-compress": "^1.1.28",
+		"astro-critters": "^1.1.26",
 		"eslint": "^8.33.0",
 		"eslint-config-neon": "^0.1.40",
 		"eslint-formatter-pretty": "^4.1.0",
@@ -47,7 +57,8 @@
 		"prettier-plugin-astro": "^0.8.0",
 		"prettier-plugin-tailwindcss": "^0.2.2",
 		"sharp": "^0.31.3",
-		"unocss": "^0.49.1"
+		"unocss": "^0.49.1",
+		"vercel": "^28.14.1"
 	},
 	"engines": {
 		"node": ">=16.9.0"
