chore: ignore apps path

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,8 @@
             "@typings/*": ["./typings/*"],
             "@cache/*": ["./cache/*"]
         }
-    }
+    },
+    "exclude": [
+        "./apps/*"
+    ]
 }
