--- a/apps/guide/package.json
+++ b/apps/guide/package.json
@@ -26,36 +26,37 @@
 	"dependencies": {
 		"@code-hike/mdx": "^0.8.0",
 		"ariakit": "^2.0.0-next.43",
+		"cmdk": "^0.1.21",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
 		"react-use": "^17.4.0"
 	},
 	"devDependencies": {
 		"@astrojs/image": "^0.13.1",
-		"@expo/styleguide": "^6.1.3",
-		"hast-util-to-string": "^2.0.0",
-		"hastscript": "^7.2.0",
-		"html-escaper": "^3.0.3",
-		"astro": "^2.0.4",
 		"@astrojs/mdx": "^0.15.2",
-		"react-custom-scrollbars-2": "^4.5.0",
 		"@astrojs/prefetch": "^0.1.2",
 		"@astrojs/react": "^2.0.2",
+		"@expo/styleguide": "^6.1.3",
 		"@types/react": "^18.0.21",
 		"@types/react-dom": "^18.0.6",
 		"@unocss/astro": "^0.49.1",
 		"@unocss/cli": "^0.49.1",
 		"@unocss/reset": "^0.49.1",
+		"astro": "^2.0.4",
 		"astro-compress": "^1.1.28",
 		"astro-critters": "^1.1.26",
-		"rehype-autolink-headings": "^6.1.1",
-		"rehype-slug": "^5.1.0",
 		"eslint": "^8.33.0",
 		"eslint-config-neon": "^0.1.40",
 		"eslint-formatter-pretty": "^4.1.0",
+		"hast-util-to-string": "^2.0.0",
+		"hastscript": "^7.2.0",
+		"html-escaper": "^3.0.3",
 		"prettier": "^2.8.3",
 		"prettier-plugin-astro": "^0.8.0",
 		"prettier-plugin-tailwindcss": "^0.2.2",
+		"react-custom-scrollbars-2": "^4.5.0",
+		"rehype-autolink-headings": "^6.1.1",
+		"rehype-slug": "^5.1.0",
 		"sharp": "^0.31.3",
 		"shiki": "^0.14.0",
 		"unocss": "^0.49.1",
