--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "devDependencies": {
     "@types/node": "^18.11.18",
     "@types/ws": "^8.5.4",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
+    "eslint": "^8.33.0",
     "tsconfig-paths": "^4.1.2",
     "tscpaths": "^0.0.9",
     "typescript": "^4.9.5"
