--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "strictNullChecks": true,
         "declaration": true,
         "esModuleInterop": true,
         "target": "ESNEXT",
