--- a/apps/guide/package.json
+++ b/apps/guide/package.json
@@ -57,6 +57,7 @@
 		"react-custom-scrollbars-2": "^4.5.0",
 		"rehype-autolink-headings": "^6.1.1",
 		"rehype-slug": "^5.1.0",
+		"sass": "^1.58.0",
 		"sharp": "^0.31.3",
 		"shiki": "^0.14.0",
 		"unocss": "^0.49.1",
