--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "c": "tsc && tscpaths -p tsconfig.json -s ./src -o ./dist && tscpaths -p tsconfig.json -s ./src -o ./typing",
     "copy_wasm": "xcopy \"src\\utils\\zlib.wasm\" \"dist\\utils\"",
-    "prepublish": "yarn c && yarn copy_wasm"
+    "prepublish": "pnpm c && pnpm copy_wasm",
+    "pretty": "pnpm lint && pnpm prettier --write .",
+    "lint": "pnpm eslint **/src/**"
   },
   "repository": {
     "type": "git",
@@ -24,6 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "eslint": "^8.33.0",
+    "prettier": "^2.8.4",
     "tsconfig-paths": "^4.1.2",
     "tscpaths": "^0.0.9",
     "typescript": "^4.9.5"
