--- a/packages/darkcord/package.json
+++ b/packages/darkcord/package.json
@@ -1,6 +1,6 @@
 {
   "name": "darkcord",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "repository": {
     "type": "git",
     "url": "https://github.com/JustAWaifuHunter/darkcord.git",
@@ -20,28 +20,19 @@
     "c:declare": "tsc --emitDeclarationOnly",
     "c": "tsup && pnpm c:declare && tscpaths -p tspaths.config.json -s ./src -o ./typings",
     "copy_wasm": "xcopy \"src\\utils\\zlib.wasm\" \"dist\\utils\"",
-    "prepublish": "pnpm c && pnpm copy_wasm",
     "lint": "pnpm eslint --ext .ts --fix **/src/**"
   },
   "dependencies": {
-    "@darkcord/rest": "workspace:rest",
-    "@darkcord/utils": "workspace:utils",
-    "@darkcord/ws": "workspace:ws",
-    "@darkcord/interactions": "workspace:interactions",
+    "@darkcord/rest": "workspace:^",
+    "@darkcord/utils": "workspace:^",
+    "@darkcord/ws": "workspace:^",
+    "@darkcord/interactions": "workspace:^",
     "discord-api-types": "^0.37.33",
     "ts-mixer": "^6.0.3",
     "undici": "^5.19.1",
     "ws": "^8.12.0"
   },
-  "devDependencies": {
-    "@types/ws": "^8.5.4",
-    "@resources": "link:src/resources",
-    "@client": "link:src/client",
-    "@typings": "link:src/types",
-    "@cache": "link:src/cache",
-    "@utils": "link:src/utils",
-    "@manager": "link:src/manager"
-  },
+  "devDependencies": {},
   "optionalDependencies": {
     "bufferutil": "^4.0.7",
     "erlpack": "^0.1.4",
