--- a/packages/interactions/package.json
+++ b/packages/interactions/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@darkcord/interactions",
+  "version": "1.0.0",
   "description": "Package to handle darkcord web server for interactions",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -25,7 +26,7 @@
   ],
   "dependencies": {
     "discord-api-types": "^0.37.33",
-    "@darkcord/rest": "workspace:rest",
-    "darkcord": "workspace:darkcord"
+    "@darkcord/rest": "workspace:^",
+    "darkcord": "workspace:^"
   }
 }
