--- a/apps/guide/package.json
+++ b/apps/guide/package.json
@@ -7,9 +7,7 @@
 		"start": "astro dev",
 		"build": "astro build",
 		"preview": "astro preview",
-		"lint": "prettier --check . && eslint src --ext .mjs,.js,.cjs,.ts,.tsx,.astro --format=pretty",
-		"format": "prettier --write . && eslint src --ext .mjs,.js,.cjs,.ts,.tsx,.astro --fix --format=pretty",
-		"fmt": "yarn format"
+		"lint": "pnpm eslint --ext .mjs,.js,.cjs,.ts,.tsx,.astro --fix **/src/**"
 	},
 	"type": "module",
 	"contributors": [
@@ -52,16 +50,14 @@
 		"hastscript": "^7.2.0",
 		"html-escaper": "^3.0.3",
 		"prettier": "^2.8.3",
-		"prettier-plugin-astro": "^0.8.0",
-		"prettier-plugin-tailwindcss": "^0.2.2",
 		"react-custom-scrollbars-2": "^4.5.0",
 		"rehype-autolink-headings": "^6.1.1",
 		"rehype-slug": "^5.1.0",
 		"sass": "^1.58.0",
 		"sharp": "^0.31.3",
 		"shiki": "^0.14.0",
-		"unocss": "^0.49.1",
-		"vercel": "^28.14.1"
+		"vercel": "^28.14.1",
+		"unocss": "^0.49.7"
 	},
 	"engines": {
 		"node": ">=16.9.0"
