--- a/apps/guide/package.json
+++ b/apps/guide/package.json
@@ -33,11 +33,11 @@
 		"@astrojs/image": "^0.13.1",
 		"@astrojs/mdx": "^0.15.2",
 		"@astrojs/prefetch": "^0.1.2",
+		"@unocss/astro": "^0.49.1",
 		"@astrojs/react": "^2.0.2",
 		"@expo/styleguide": "^6.1.3",
 		"@types/react": "^18.0.21",
 		"@types/react-dom": "^18.0.6",
-		"@unocss/astro": "^0.49.1",
 		"@unocss/cli": "^0.49.1",
 		"@unocss/reset": "^0.49.1",
 		"astro": "^2.0.4",
@@ -56,8 +56,8 @@
 		"sass": "^1.58.0",
 		"sharp": "^0.31.3",
 		"shiki": "^0.14.0",
-		"vercel": "^28.14.1",
-		"unocss": "^0.49.7"
+		"unocss": "^0.49.7",
+		"vercel": "^28.14.1"
 	},
 	"engines": {
 		"node": ">=16.9.0"
