--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "darkcord-project",
+  "name": "@darkcord/darkcord",
   "description": "darkcord workspace",
   "workspaces": [
     "packages/*",
@@ -22,6 +22,8 @@
     "unocss": "^0.49.7"
   },
   "dependencies": {
+    "ariakit": "2.0.0-next.43",
+    "react-use": "^17.4.0",
     "tsup": "^6.6.3"
   }
 }
