fix vercel issues again

--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "pnpm --top-level generate:css && concurrently \"pnpm dev:css\" \"pnpm dev:next\"",
+    "build:prod": "yarn build:css && yarn build:next",
     "build:next": "next build",
 		"build:css": "pnpm generate:css",
     "dev:next": "next dev",
