--- a/apps/guide/package.json
+++ b/apps/guide/package.json
@@ -23,7 +23,7 @@
 	},
 	"dependencies": {
 		"@code-hike/mdx": "^0.8.0",
-		"ariakit": "^2.0.0-next.43",
+		"ariakit": "2.0.0-next.43",
 		"cmdk": "^0.1.21",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
@@ -33,13 +33,15 @@
 		"@astrojs/image": "^0.13.1",
 		"@astrojs/mdx": "^0.15.2",
 		"@astrojs/prefetch": "^0.1.2",
-		"@unocss/astro": "^0.49.1",
 		"@astrojs/react": "^2.0.2",
 		"@expo/styleguide": "^6.1.3",
 		"@types/react": "^18.0.21",
 		"@types/react-dom": "^18.0.6",
+		"@unocss/astro": "^0.49.1",
 		"@unocss/cli": "^0.49.1",
 		"@unocss/reset": "^0.49.1",
+		"ariakit-react-utils": "0.17.0-next.27",
+		"ariakit-utils": "0.17.0-next.27",
 		"astro": "^2.0.4",
 		"astro-compress": "^1.1.28",
 		"astro-critters": "^1.1.26",
