--- a/packages/darkcord/package.json
+++ b/packages/darkcord/package.json
@@ -23,16 +23,24 @@
     "lint": "pnpm eslint --ext .ts --fix **/src/**"
   },
   "dependencies": {
+    "@darkcord/interactions": "workspace:^",
     "@darkcord/rest": "workspace:^",
     "@darkcord/utils": "workspace:^",
     "@darkcord/ws": "workspace:^",
-    "@darkcord/interactions": "workspace:^",
     "discord-api-types": "^0.37.33",
     "ts-mixer": "^6.0.3",
     "undici": "^5.19.1",
     "ws": "^8.12.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@darkcord/docgen": "^1.0.1",
+    "@typings": "link:src/types",
+    "@resources": "link:src/resources",
+    "@utils": "link:src/utils",
+    "@manager": "link:src/manager",
+    "@cache": "link:src/cache",
+    "@client": "link:src/client"
+  },
   "optionalDependencies": {
     "bufferutil": "^4.0.7",
     "erlpack": "^0.1.4",
