--- a/packages/darkcord/package.json
+++ b/packages/darkcord/package.json
@@ -33,7 +33,7 @@
     "ws": "^8.12.0"
   },
   "devDependencies": {
-    "@darkcord/docgen": "^1.0.1",
+    "@darkcord/docgen": "workspace:^",
     "@typings": "link:src/types",
     "@resources": "link:src/resources",
     "@utils": "link:src/utils",
