--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,31 @@
 {
-  "eslint.workingDirectories": [{ "pattern": "./apps/*" }, { "pattern": "./packages/*" }],
-  "eslint.validate": ["javascript", "javascriptreact", "astro", "typescript", "typescriptreact"],
-  "prettier.documentSelectors": ["**/*.astro"],
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-	"editor.formatOnSave": true,
-  "editor.codeActionsOnSave": {
-		"source.fixAll": true,
-		"source.organizeImports": false
-	},
-  "files.associations": {
-		"*.mdx": "markdown"
-	},
-  "files.insertFinalNewline": true,
-	"files.eol": "\n",
+    "eslint.workingDirectories": [
+        {
+            "pattern": "./apps/*"
+        },
+        {
+            "pattern": "./packages/*"
+        }
+    ],
+    "eslint.validate": [
+        "javascript",
+        "javascriptreact",
+        "astro",
+        "typescript",
+        "typescriptreact"
+    ],
+    "prettier.documentSelectors": [
+        "**/*.astro"
+    ],
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true,
+    "editor.codeActionsOnSave": {
+        "source.fixAll": true,
+        "source.organizeImports": false
+    },
+    "files.associations": {
+        "*.mdx": "markdown"
+    },
+    "files.insertFinalNewline": true,
+    "files.eol": "\n"
 }
