--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,16 +29,16 @@
     "files.insertFinalNewline": true,
     "files.eol": "\n",
     "files.exclude": {
-        "**/.git": true,
-        "**/.svn": true,
-        "**/.hg": true,
-        "**/CVS": true,
-        "**/.DS_Store": true,
-        "**/Thumbs.db": true,
-        "**/node_modules": true,
-        "**/tsconfig.json": true
+        "**/.git": false,
+        "**/.svn": false,
+        "**/.hg": false,
+        "**/CVS": false,
+        "**/.DS_Store": false,
+        "**/Thumbs.db": false,
+        "**/node_modules": false,
+        "**/tsconfig.json": false
     },
-    "workspace.isHidden": true,
+    "workspace.isHidden": false,
     "cSpell.words": [
         "darkcord",
         "docgen",
