--- a/packages/darkcord/.vscode/settings.json
+++ b/packages/darkcord/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "files.exclude": {
-        "tsconfig.json": true
+        "tsconfig.json": false
     },
-    "workspace.isHidden": true
+    "workspace.isHidden": false
 }
