--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -42,7 +42,13 @@
     "react-use": "^17.4.0",
     "shiki": "^0.14.0",
     "@unocss/cli": "^0.49.7",
-    "@unocss/reset": "^0.49.7"
+    "@unocss/reset": "^0.49.7",
+    "unocss": "^0.49.7",
+    "rehype-ignore": "^1.0.4",
+    "rehype-pretty-code": "^0.9.4",
+    "rehype-raw": "^6.1.1",
+    "rehype-slug": "^5.1.0",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@microsoft/tsdoc-config": "^0.16.2",
@@ -53,20 +59,6 @@
     "eslint": "^8.34.0",
     "eslint-config-next": "13.1.6",
     "jju": "^1.4.0",
-    "rehype-ignore": "^1.0.4",
-    "rehype-pretty-code": "^0.9.4",
-    "rehype-raw": "^6.1.1",
-    "rehype-slug": "^5.1.0",
-    "remark-gfm": "^3.0.1",
-    "typescript": "^4.9.5",
-    "unocss": "^0.49.7"
-  },
-  "nextBundleAnalysis": {
-    "budget": 358400,
-    "budgetPercentIncreaseRed": 20,
-    "showDetails": true
-  },
-  "engines": {
-    "node": ">=16.9.0"
+    "typescript": "^4.9.5"
   }
 }
