--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "interactions": "^0.0.1",
     "prettier": "^2.8.4",
     "tscpaths": "^0.0.9",
-    "typescript": "^4.9.5",
-    "unocss": "^0.49.7"
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "tsup": "^6.6.3"
