--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -28,11 +28,14 @@
   "dependencies": {
     "@microsoft/api-extractor-model": "^7.26.4",
     "@microsoft/tsdoc": "^0.14.2",
+    "@microsoft/tsdoc-config": "^0.16.2",
     "@next/bundle-analyzer": "^13.1.6",
+    "@unocss/cli": "^0.49.7",
+    "@unocss/reset": "^0.49.7",
     "@vercel/og": "^0.1.0",
     "ariakit": "2.0.0-next.43",
     "cmdk": "^0.1.22",
-    "next": "13.1.6",
+    "next": "13.2.1-canary.0",
     "next-mdx-remote": "^4.3.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
@@ -40,16 +43,13 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-use": "^17.4.0",
-    "shiki": "^0.14.0",
-    "@unocss/cli": "^0.49.7",
-    "@unocss/reset": "^0.49.7",
-    "unocss": "^0.49.7",
     "rehype-ignore": "^1.0.4",
     "rehype-pretty-code": "^0.9.4",
     "rehype-raw": "^6.1.1",
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
-    "@microsoft/tsdoc-config": "^0.16.2"
+    "shiki": "^0.14.0",
+    "unocss": "^0.49.7"
   },
   "devDependencies": {
     "@types/node": "^18.14.0",
