--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -33,6 +33,7 @@
     "@unocss/cli": "^0.49.7",
     "@unocss/reset": "^0.49.7",
     "@vercel/og": "^0.1.0",
+    "ajv": "^8.12.0",
     "ariakit": "2.0.0-next.43",
     "cmdk": "^0.1.22",
     "next": "13.2.1-canary.0",
@@ -48,13 +49,16 @@
     "rehype-raw": "^6.1.1",
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
+    "resolve": "^1.22.1",
     "shiki": "^0.14.0",
     "unocss": "^0.49.7"
   },
   "devDependencies": {
+    "@types/jju": "^1.4.2",
     "@types/node": "^18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/resolve": "^1.20.2",
     "concurrently": "^7.6.0",
     "eslint": "^8.34.0",
     "eslint-config-next": "13.1.6",
