--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -35,7 +35,7 @@
     "ajv": "^8.12.0",
     "ariakit": "2.0.0-next.43",
     "cmdk": "^0.1.22",
-    "next": "13.2.1-canary.0",
+    "next": "13.2.1",
     "next-mdx-remote": "^4.3.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
