--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,4 +36,5 @@ jobs:
         cache-dependency-path: 'pnpm-lock.yaml'
       
     - run: pnpm install --frozen-lockfile
-    - run: pnpm run c --if-present
+    - run: pnpm run c
+      working-directory: ./packages/darkcord
