--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "apps/*"
   ],
   "scripts": {
-    "pretty": "pnpm prettier --write ."
+    "pretty": "pnpm prettier --write .",
+    "build": "node scripts/build.js"
   },
   "devDependencies": {
     "@types/node": "^18.13.0",
@@ -17,6 +18,7 @@
     "eslint-plugin-import": "^2.27.5",
     "interactions": "^0.0.1",
     "prettier": "^2.8.4",
+    "ts-node": "^10.9.1",
     "tscpaths": "^0.0.9",
     "typescript": "^4.9.5",
     "unocss": "^0.49.7"
