--- a/apps/guide/.gitignore
+++ b/apps/guide/.gitignore
@@ -1,22 +1,36 @@
-# build output
-dist/
-# generated types
-.astro/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules/
+/node_modules
+/.pnp
+.pnp.js
 
-# logs
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 
+# local env files
+.env*.local
 
-# environment variables
-.env
-.env.production
-
-# macOS-specific files
-.DS_Store
+# vercel
 .vercel
+
+# typescript
+*.tsbuildinfo
+
+.contentlayer
