--- a/apps/guide/package.json
+++ b/apps/guide/package.json
@@ -1,67 +1,71 @@
 {
+	"$schema": "https://json.schemastore.org/package.json",
 	"name": "@darkcord/guide",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "astro dev",
-		"start": "astro dev",
-		"build": "astro build",
-		"preview": "astro preview",
-		"lint": "pnpm eslint --ext .mjs,.js,.cjs,.ts,.tsx,.astro --fix **/src/**"
+		"dev": "next dev -p 3001",
+		"build": "contentlayer build && next build",
+		"start": "next start -p 3001",
+		"lint": "prettier --check . && eslint --format=pretty src",
+		"format": "prettier --write . && eslint --fix --format=pretty src",
+		"fmt": "pnpm run format"
 	},
-	"type": "module",
-	"contributors": [
-		"Nicolas Ribeiro <business@niskii.dev>"
-	],
-	"license": "Apache-2.0",
+	"type": "commonjs",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/JustAWaifuHunter/darkcord.git"
+		"url": "https://github.com/JustAWaifuHunter/darkcord.git",
+		"directory": "apps/guide"
 	},
 	"bugs": {
 		"url": "https://github.com/JustAWaifuHunter/darkcord/issues"
 	},
 	"dependencies": {
-		"@code-hike/mdx": "^0.8.0",
-		"ariakit": "2.0.0-next.43",
-		"cmdk": "^0.1.21",
-		"react": "^18.0.0",
-		"react-dom": "^18.0.0",
-		"react-use": "^17.4.0"
+		"@radix-ui/react-dialog": "^1.0.5",
+		"@radix-ui/react-dropdown-menu": "^2.0.6",
+		"@radix-ui/react-scroll-area": "^1.0.5",
+		"@radix-ui/react-slot": "^1.0.2",
+		"@vercel/analytics": "^1.1.1",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.0.0",
+		"cmdk": "^0.2.0",
+		"contentlayer": "^0.3.4",
+		"lucide-react": "^0.288.0",
+		"mdast-util-toc": "^7.0.0",
+		"next": "13.5.7-canary.13",
+		"next-contentlayer": "^0.3.4",
+		"next-themes": "^0.2.1",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-wrap-balancer": "^1.1.0",
+		"rehype-autolink-headings": "^7.0.0",
+		"rehype-pretty-code": "^0.10.1",
+		"rehype-slug": "^6.0.0",
+		"remark": "^15.0.1",
+		"remark-code-import": "^1.2.0",
+		"remark-gfm": "^4.0.0",
+		"shiki": "^0.14.5",
+		"tailwind-merge": "^1.14.0",
+		"tailwindcss-animate": "^1.0.7",
+		"unist-builder": "^4.0.0",
+		"unist-util-visit": "^5.0.0",
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
-		"@astrojs/image": "^0.13.1",
-		"@astrojs/mdx": "^0.15.2",
-		"@astrojs/prefetch": "^0.1.2",
-		"@astrojs/react": "^2.0.2",
-		"@expo/styleguide": "^6.1.3",
-		"@types/react": "^18.0.21",
-		"@types/react-dom": "^18.0.6",
-		"@unocss/astro": "^0.49.1",
-		"@unocss/cli": "^0.49.1",
-		"@unocss/reset": "^0.49.1",
-		"ariakit-react-utils": "0.17.0-next.27",
-		"ariakit-utils": "0.17.0-next.27",
-		"astro": "^2.0.4",
-		"astro-compress": "^1.1.28",
-		"astro-critters": "^1.1.26",
-		"eslint": "^8.33.0",
-		"eslint-config-neon": "^0.1.40",
-		"eslint-formatter-pretty": "^4.1.0",
-		"hast-util-to-string": "^2.0.0",
-		"hastscript": "^7.2.0",
-		"html-escaper": "^3.0.3",
-		"prettier": "^2.8.3",
-		"react-custom-scrollbars-2": "^4.5.0",
-		"rehype-autolink-headings": "^6.1.1",
-		"rehype-slug": "^5.1.0",
-		"sass": "^1.58.0",
-		"sharp": "^0.31.3",
-		"shiki": "^0.14.0",
-		"unocss": "^0.49.7",
-		"vercel": "^28.14.1"
-	},
-	"engines": {
-		"node": ">=16.9.0"
+		"@next/bundle-analyzer": "^13.5.6",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"autoprefixer": "^10",
+		"eslint": "^8.52.0",
+		"eslint-config-neon": "^0.1.57",
+		"eslint-config-next": "13.5.6",
+		"eslint-formatter-pretty": "^5.0.0",
+		"postcss": "^8",
+		"prettier": "^2.8.4",
+		"tailwindcss": "^3",
+		"turbo": "^1.10.16",
+		"typescript": "^5",
+		"vercel": "^32.5.0"
 	}
 }
