--- a/apps/guide/tsconfig.json
+++ b/apps/guide/tsconfig.json
@@ -1,19 +1,29 @@
 {
 	"compilerOptions": {
-		"lib": ["ESNext", "DOM", "DOM.Iterable"],
+		"target": "es5",
+		"lib": ["dom", "dom.iterable", "esnext"],
+		"allowJs": true,
+		"skipLibCheck": true,
+		"strict": true,
+		"noEmit": true,
+		"esModuleInterop": true,
+		"module": "esnext",
+		"moduleResolution": "bundler",
+		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"jsx": "preserve",
-		"baseUrl": ".",
-		"noEmit": true,
-		"allowJs": false,
 		"incremental": true,
-		"strictNullChecks": true,
-		"skipLibCheck": true,
-		"types": ["@astrojs/image/client"],
+		"baseUrl": ".",
+		"plugins": [
+			{
+				"name": "next"
+			}
+		],
 		"paths": {
-			"~/*": ["./src/*"]
+			"~/*": ["./src/*"],
+			"contentlayer/generated": ["./.contentlayer/generated"]
 		}
 	},
-	"include": ["src/**/*.ts", "src/**/*.tsx", "types.d.ts"],
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "contentlayer.config.js"],
 	"exclude": ["node_modules"]
 }
