--- a/apps/guide/package.json
+++ b/apps/guide/package.json
@@ -23,6 +23,7 @@
 	"dependencies": {
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
+		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-scroll-area": "^1.0.5",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@vercel/analytics": "^1.1.1",
@@ -31,24 +32,26 @@
 		"cmdk": "^0.2.0",
 		"contentlayer": "^0.3.4",
 		"lucide-react": "^0.288.0",
-		"mdast-util-toc": "^7.0.0",
+		"markdown-wasm": "^1.2.0",
 		"next": "13.5.7-canary.13",
 		"next-contentlayer": "^0.3.4",
 		"next-themes": "^0.2.1",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-wrap-balancer": "^1.1.0",
+		"rehype": "^13.0.1",
 		"rehype-autolink-headings": "^7.0.0",
 		"rehype-pretty-code": "^0.10.1",
 		"rehype-slug": "^6.0.0",
 		"remark": "^15.0.1",
 		"remark-code-import": "^1.2.0",
 		"remark-gfm": "^4.0.0",
+		"sharp": "^0.32.6",
 		"shiki": "^0.14.5",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss-animate": "^1.0.7",
-		"unist-builder": "^4.0.0",
-		"unist-util-visit": "^5.0.0",
+		"unist-builder": "3.0.0",
+    "unist-util-visit": "^4.1.2",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
