--- a/apps/guide/package.json
+++ b/apps/guide/package.json
@@ -31,6 +31,9 @@
 		"clsx": "^2.0.0",
 		"cmdk": "^0.2.0",
 		"contentlayer": "^0.3.4",
+		"hast-util-to-string": "^3.0.0",
+		"hastscript": "^8.0.0",
+		"html-escaper": "^3.0.3",
 		"lucide-react": "^0.288.0",
 		"markdown-wasm": "^1.2.0",
 		"next": "13.5.7-canary.13",
@@ -56,6 +59,7 @@
 	},
 	"devDependencies": {
 		"@next/bundle-analyzer": "^13.5.6",
+		"@types/html-escaper": "^3.0.1",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
