--- a/apps/guide/tsconfig.json
+++ b/apps/guide/tsconfig.json
@@ -24,6 +24,6 @@
 			"contentlayer/generated": ["./.contentlayer/generated"]
 		}
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "contentlayer.config.js"],
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "contentlayer.config.ts"],
 	"exclude": ["node_modules"]
 }
