--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -4,9 +4,9 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
+		"dev": "concurrently \"contentlayer dev\" \"next dev -p 3001\"",
+		"build": "contentlayer build && next build",
+		"start": "next start -p 3001",
 		"lint": "prettier --check . && eslint --format=pretty src",
 		"format": "prettier --write . && eslint --fix --format=pretty src",
 		"fmt": "pnpm run format"
@@ -22,38 +22,57 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-dialog": "^1.0.5",
+		"@radix-ui/react-dropdown-menu": "^2.0.6",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-navigation-menu": "^1.1.4",
 		"@radix-ui/react-scroll-area": "^1.0.5",
 		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-toast": "^1.1.5",
+		"@t3-oss/env-nextjs": "^0.7.1",
 		"@vercel/analytics": "^1.1.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
-		"lucide-react": "^0.288.0",
-		"next": "13.5.6",
+		"cmdk": "^0.2.0",
+		"concurrently": "^8.2.2",
+		"contentlayer": "^0.3.4",
+		"hast-util-to-string": "^3.0.0",
+		"hastscript": "^8.0.0",
+		"html-escaper": "^3.0.3",
+		"lucide-react": "^0.290.0",
+		"next": "14.0.0",
+		"next-contentlayer": "^0.3.4",
 		"next-mdx-remote": "^4.4.1",
 		"next-themes": "^0.2.1",
-		"react": "^18",
-		"react-dom": "^18",
-		"rehype": "^13.0.1",
-		"rehype-slug": "^6.0.0",
-		"remark-gfm": "^4.0.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"shiki": "^0.14.5",
 		"tailwind-merge": "^1.14.0",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
-		"@next/bundle-analyzer": "^13.5.6",
-		"@types/node": "^20",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
-		"autoprefixer": "^10",
+		"@next/bundle-analyzer": "^14.0.0",
+		"@types/html-escaper": "^3.0.1",
+		"@types/node": "^20.8.9",
+		"@types/react": "^18.2.33",
+		"@types/react-dom": "^18.2.14",
+		"autoprefixer": "^10.4.16",
 		"eslint": "^8.52.0",
 		"eslint-config-neon": "^0.1.57",
 		"eslint-formatter-pretty": "^5.0.0",
-		"postcss": "^8",
-		"prettier": "^2.8.4",
-		"tailwindcss": "^3",
-		"typescript": "^5",
+		"postcss": "^8.4.31",
+		"prettier": "^3.0.3",
+		"rehype": "^13.0.1",
+		"rehype-autolink-headings": "^7.0.0",
+		"rehype-pretty-code": "^0.10.2",
+		"rehype-slug": "^6.0.0",
+		"remark": "^15.0.1",
+		"remark-code-import": "^1.2.0",
+		"remark-gfm": "^4.0.0",
+		"tailwindcss": "^3.3.5",
+		"typescript": "^5.2.2",
+		"unist-builder": "3.0.0",
+		"unist-util-visit": "^4.1.2",
 		"vercel": "^32.5.0"
 	},
 	"engines": {
