--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,8 +20,8 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
-        "source.fixAll": true,
-        "source.organizeImports": false
+        "source.fixAll": "explicit",
+        "source.organizeImports": "never"
     },
     "files.associations": {
         "*.mdx": "markdown"
