--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-router-dom": "^6.22.0",
+    "react-wrap-balancer": "^1.1.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
