--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,15 +6,8 @@
     "ecmaVersion": "latest",
     "sourceType": "script"
   },
-  "plugins": [
-    "@typescript-eslint",
-    "import/typescript"
-  ],
-  "ignorePatterns": [
-    "**/dist/*",
-    "**/typing/*",
-    "**/*.wasm"
-  ],
+  "plugins": ["@typescript-eslint", "import/typescript"],
+  "ignorePatterns": ["**/dist/*", "**/typing/*", "**/*.wasm"],
   "rules": {
     "@typescript-eslint/ban-ts-comment": "error",
     "@typescript-eslint/ban-types": "error",
