--- a/packages/interactions/tsconfig.json
+++ b/packages/interactions/tsconfig.json
@@ -3,5 +3,6 @@
   "compilerOptions": {
     "outDir": "./dist"
   },
-  "exclude": ["dist", "types"]
+  "include": ["./src/**/*"],
+  "exclude": ["./dist/**/*"]
 }
