--- a/packages/zlib/tsconfig.json
+++ b/packages/zlib/tsconfig.json
@@ -4,6 +4,6 @@
     "outDir": "./dist",
     "baseUrl": "./src"
   },
-  "exclude": ["dist"],
-  "include": ["./src"]
+  "exclude": ["./dist/**/*"],
+  "include": ["./src/**/*"]
 }
