--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -5,5 +5,6 @@
     "declarationDir": "./types",
     "baseUrl": "./src"
   },
-  "exclude": ["dist", "types"]
+  "include": ["./src/**/*"],
+  "exclude": ["./dist/**/*", "./types/**/*"]
 }
