--- a/packages/zlib/package.json
+++ b/packages/zlib/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.2",
   "main": "./cpp.js",
   "types": "./cpp.d.ts",
+  "type": "commonjs",
   "scripts": {
     "build": "node-gyp configure build"
   },
